[project]
name = "programmieren_2_aufgabe_1_ew"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Elasche", email = "we1112@mci4me.at"},
]
dependencies = []
requires-python = "==3.14.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
